# homebox-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
homebox-mcp/: Dockerfile  README.md
homebox-mcp/src/homebox_mcp/: __init__.py
homebox-mcp/src/homebox_mcp/tools/: locations.py  models.py
homebox-mcp/tests/: conftest.py  test_session.py  test_tools_items.py
inventory-api/: Dockerfile  homebox_client.py  index.html  main.py  requirements.txt  tools.py
src/homebox_mcp/: __main__.py  client.py  config.py  server.py  session.py
src/homebox_mcp/tools/: __init__.py  items.py  locations.py  session.py
tests/: test_client.py  test_session.py  test_tools_items.py  test_tools_locations.py
